package Labb;

/**
 * Enumerations for orientation in the 2d space.
 */
public enum Direction {
    UP, DOWN, LEFT, RIGHT
}