package Labb;

import java.awt.image.BufferedImage;

public interface IDrawable {
    public double getX();
    public double getY();
    public BufferedImage getIcon();
}
