package Labb;

public interface IObserver {
    void observerUpdate();
}
