package com.mojang.tower;

public class test extends Entity {

    public test(double x, double y, double r) {
        super(x, y, r);
    }
}
