@startuml

title __LABB-1's Class Diagram__\n

    namespace abb {
      class Labb.Application {
      }
    }


    namespace abb {
      class Labb.CarController {
      }
    }


    namespace abb {
      interface Labb.IObservable {
      }
    }


    namespace abb {
      interface Labb.IObserver {
      }
    }


    namespace abb {
      class Labb.Main {
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.AngledFlatbed {
        }
      }
    }


    namespace abb {
      namespace Model {
        abstract class Labb.Model.Car {
        }
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.CarFerry {
        }
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.CarTransporter {
        }
      }
    }


    namespace abb {
      namespace Model {
        enum Direction {
        }
      }
    }


    namespace abb {
      namespace Model {
        abstract class Labb.Model.Flatbed {
        }
      }
    }


    namespace abb {
      namespace Model {
        interface Labb.Model.ICanLoadCars {
        }
      }
    }


    namespace abb {
      namespace Model {
        interface Labb.Model.IDrawable {
        }
      }
    }


    namespace abb {
      namespace Model {
        interface Labb.Model.IMovable {
        }
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.Model {
        }
      }
    }


    namespace abb {
      namespace Model {
        abstract class Labb.Model.MotorizedVehicle {
        }
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.MotorizedVehicleFactory {
        }
      }
    }


   namespace abb {
      namespace Model {
        class Labb.Model.Saab95 {
        }
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.Scania {
        }
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.StateFlatbed {
        }
      }
    }


    namespace abb {
      namespace Model {
        abstract class Labb.Model.Truck {
        }
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.Volvo240 {
        }
      }
    }


    namespace abb {
      namespace Model {
        class Labb.Model.Workshop {
        }
      }
    }


    namespace abb {
      namespace View {
        class Labb.View.CarView {
        }
      }
    }


    namespace abb {
      namespace View {
        class Labb.View.DrawPanel {
        }
      }
    }


    namespace abb {
      namespace View {
        class Labb.View.SpeedPanel {
        }
      }
    }


  namespace abb  {
    class test {
    }
  }
  

  Labb.CarController o-- Labb.View.CarView : frame
  Labb.CarController o-- Labb.Model.Model : model
  Labb.Model.AngledFlatbed -up-|> Labb.Model.Flatbed
  Labb.Model.Car -up-|> Labb.Model.MotorizedVehicle
  Labb.Model.CarFerry .up.|> Labb.Model.ICanLoadCars
  Labb.Model.CarFerry -up-|> Labb.Model.MotorizedVehicle
  Labb.Model.CarTransporter .up.|> Labb.Model.ICanLoadCars
  Labb.Model.CarTransporter -up-|> Labb.Model.Truck
  Labb.Model.Model .up.|> Labb.IObservable
  Labb.Model.Model o-- Labb.Model.MotorizedVehicleFactory : factory
  Labb.Model.MotorizedVehicle .up.|> Labb.Model.IDrawable
  Labb.Model.MotorizedVehicle .up.|> Labb.Model.IMovable
  Labb.Model.MotorizedVehicle o-- Labb.Model.ICanLoadCars : carrier
  Labb.Model.MotorizedVehicle o-- Labb.Model.Direction : currentDirection
  Labb.Model.Saab95 -up-|> Labb.Model.Car
  Labb.Model.Scania -up-|> Labb.Model.Truck
  Labb.Model.Scania o-- Labb.Model.AngledFlatbed : flatbed
  Labb.Model.StateFlatbed -up-|> Labb.Model.Flatbed
  Labb.Model.Truck -up-|> Labb.Model.MotorizedVehicle
  Labb.Model.Volvo240 -up-|> Labb.Model.Car
  Labb.Model.Workshop .up.|> Labb.Model.ICanLoadCars
  Labb.View.CarView -up-|> javax.swing.JFrame
  Labb.View.CarView o-- Labb.View.DrawPanel : drawPanel
  Labb.View.CarView o-- Labb.View.SpeedPanel : speedPanel
  Labb.View.DrawPanel .up.|> Labb.IObserver
  Labb.View.DrawPanel -up-|> javax.swing.JPanel
  Labb.View.DrawPanel o-- Labb.Model.Model : model
  Labb.View.SpeedPanel .up.|> Labb.IObserver
  Labb.View.SpeedPanel -up-|> javax.swing.JPanel
  Labb.View.SpeedPanel o-- Labb.Model.Model : model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
